--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,9 @@
 apply plugin: 'scala'
 apply plugin: 'maven-publish'
 apply plugin: 'idea'
-apply plugin: 'clojure'
 
 version = projectVersion
 group = artifactGroup
-
-buildscript {               // For Clojure plugin
-
-    repositories {
-        mavenRepo name: 'clojars', urls: 'http://clojars.org/repo'
-    }
-
-    dependencies {
-        classpath "clojuresque:clojuresque:1.5.8"
-    }
-}
 
 tasks.withType(ScalaCompile) {
     scalaCompileOptions.fork = true
@@ -30,9 +18,9 @@ tasks.withType(ScalaCompile) {
 }
 
 dependencies {
+    compile "org.scala-lang:scala-compiler:$scalaVersion"
     compile "org.scala-lang:scala-library:$scalaVersion"
-    compile "org.clojure:clojure:1.5.1"
-    compile "clojail:clojail:1.0.6"
+    compile "com.googlecode.scalascriptengine:scalascriptengine:1.3.7-$scalaVersion"
 
     testCompile 'junit:junit:4.11'
     testCompile 'org.scalatest:scalatest_2.10:2.0.M5b'
@@ -41,10 +29,8 @@ dependencies {
 repositories {
     mavenLocal()
     mavenCentral()
-    clojarsRepo()
+    mavenRepo name: 'sonatype-releases', url: "https://oss.sonatype.org/content/repositories/releases"
 }
-
-aotCompile = true
 
 publishToMavenLocal.dependsOn test
 
