--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,21 @@ test {
     systemProperties = System.getProperties()
 }
 
+task test(overwrite: true, dependsOn: testClasses) << {
+    ant.taskdef(name: 'scalatest',
+        classname: 'org.scalatest.tools.ScalaTestAntTask',
+        classpath: sourceSets.test.runtimeClasspath.asPath
+    )
+    ant.scalatest(runpath: sourceSets.test.output.classesDir,
+        haltonfailure: 'true',
+        fork: 'true') {
+        System.getProperties().each {
+            jvmarg(value: "-D" + it.key + "=" + it.value)
+        }
+        reporter(type: 'stderr')
+    }
+}
+
 publishing {
     publications {
         mavenJava(MavenPublication) {
