--- a/build.gradle
+++ b/build.gradle
@@ -23,8 +23,8 @@ dependencies {
     compile "com.googlecode.scalascriptengine:scalascriptengine:1.3.7-$scalaVersion"
 
     testCompile 'junit:junit:4.11'
-    testCompile 'org.scalatest:scalatest_2.10:2.0.M5b'
-    testCompile 'org.scalamock:scalamock-scalatest-support_2.10:3.0.1'
+    testCompile 'org.scalatest:scalatest_2.10:2.0'
+    testCompile 'org.scalamock:scalamock-scalatest-support_2.10:3.1.RC1'
     testCompile 'org.scalacheck:scalacheck_2.10:1.11.1'
 }
 
