--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-projectVersion = 0.9-SNAPSHOT
-artifactGroup = com.cyrusinnovation
+projectVersion = 1.0-SNAPSHOT
+artifactGroup = com.cyrusinnovation.computation-engine
 scalaVersion = 2.10.3
 org.gradle.daemon=true
 org.gradle.jvmargs=-Xmx1G -XX:MaxPermSize=256M
