--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
-projectVersion = 1.0-SNAPSHOT
+projectVersion = 1.0
 artifactGroup = com.cyrusinnovation.computation-engine
 scalaVersion = 2.10.3
 org.gradle.daemon=true
 org.gradle.jvmargs=-Xmx1G -XX:MaxPermSize=256M
+docDirname = doc
