--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-projectVersion = 1.0
+projectVersion = 1.1-SNAPSHOT
 artifactGroup = com.cyrusinnovation.computation-engine
 scalaVersion = 2.10.3
 org.gradle.daemon=true
