--- a/db/build.gradle
+++ b/db/build.gradle
@@ -17,6 +17,7 @@ dependencies {
     compile "org.scala-lang:scala-compiler:$scalaVersion"
     compile "org.scala-lang:scala-library:$scalaVersion"
     compile "com.googlecode.scalascriptengine:scalascriptengine:1.3.7-$scalaVersion"
+    compile "com.cyrusinnovation.computation-engine:computation-engine-core:1.1.1"
     compile "org.filamentgraph:filament-core:0.15.2"
     compile "org.meta-jb:meta-jb-util:0.20.1"
 
