--- a/persistence/build.gradle
+++ b/persistence/build.gradle
@@ -18,8 +18,11 @@ dependencies {
     compile "org.scala-lang:scala-library:$scalaVersion"
     compile "com.googlecode.scalascriptengine:scalascriptengine:1.3.7-$scalaVersion"
     compile "com.cyrusinnovation.computation-engine:computation-engine-core:1.1.1"
+    compile "net.sf.opencsv:opencsv:2.3"
     compile "org.filamentgraph:filament-core:0.15.2"
     compile "org.meta-jb:meta-jb-util:0.20.1"
+
+    compile project(':core')
 
     testCompile 'junit:junit:4.11'
     testCompile 'org.scalatest:scalatest_2.10:2.0'
