--- a/persistence/build.gradle
+++ b/persistence/build.gradle
@@ -19,15 +19,13 @@ dependencies {
     compile "com.googlecode.scalascriptengine:scalascriptengine:1.3.7-$scalaVersion"
     compile "com.cyrusinnovation.computation-engine:computation-engine-core:1.1.1"
     compile "net.sf.opencsv:opencsv:2.3"
-    compile "org.filamentgraph:filament-core:0.15.2"
-    compile "org.meta-jb:meta-jb-util:0.20.1"
 
     compile project(':core')
 
-    testCompile 'junit:junit:4.11'
-    testCompile 'org.scalatest:scalatest_2.10:2.0'
-    testCompile 'org.scalamock:scalamock-scalatest-support_2.10:3.1.RC1'
-    testCompile 'org.scalacheck:scalacheck_2.10:1.11.1'
+    testCompile "junit:junit:4.11"
+    testCompile "org.scalatest:scalatest_2.10:2.0"
+    testCompile "org.scalamock:scalamock-scalatest-support_2.10:3.1.RC1"
+    testCompile "com.h2database:h2:1.4.177"
 }
 
 // scaladoc.excludes = ['**com/cyrusinnovation/computation/EvalCode.scala', '**com/cyrusinnovation/computation/util/Logger.scala']
