--- a/persistence/build.gradle
+++ b/persistence/build.gradle
@@ -19,6 +19,7 @@ dependencies {
     compile "com.googlecode.scalascriptengine:scalascriptengine:1.3.7-$scalaVersion"
     compile "com.cyrusinnovation.computation-engine:computation-engine-core:1.1.1"
     compile "net.sf.opencsv:opencsv:2.3"
+    compile "org.yaml:snakeyaml:1.13"
 
     compile project(':core')
 
