--- a/persistence/build.gradle
+++ b/persistence/build.gradle
@@ -29,6 +29,17 @@ dependencies {
     testCompile "com.h2database:h2:1.4.177"
 }
 
+task test(overwrite: true, dependsOn: testClasses) << {
+    ant.taskdef(name: 'scalatest',
+                classname: 'org.scalatest.tools.ScalaTestAntTask',
+                classpath: sourceSets.test.runtimeClasspath.asPath
+               )
+    ant.scalatest(runpath: sourceSets.test.output.classesDir,
+                  haltonfailure: 'true',
+                  fork: 'true')
+                  { reporter(type: 'stderr') }
+}
+
 // scaladoc.excludes = ['**com/cyrusinnovation/computation/EvalCode.scala', '**com/cyrusinnovation/computation/util/Logger.scala']
 scaladoc.title = 'Computation Engine Persistence API, version ' + version
 
