--- a/persistence/build.gradle
+++ b/persistence/build.gradle
@@ -27,6 +27,20 @@ dependencies {
     testCompile "org.scalatest:scalatest_2.10:2.0"
     testCompile "org.scalamock:scalamock-scalatest-support_2.10:3.1.RC1"
     testCompile "com.h2database:h2:1.4.177"
+
+    testCompile project(':core').sourceSets.test.output
+}
+
+task test(overwrite: true, dependsOn: testClasses) << {
+    ant.taskdef(name: 'scalatest',
+        classname: 'org.scalatest.tools.ScalaTestAntTask',
+        classpath: sourceSets.test.runtimeClasspath.asPath
+    )
+    ant.scalatest(runpath: sourceSets.test.output.classesDir,
+        haltonfailure: 'true',
+        fork: 'true')
+        {reporter(type: 'stderr')
+    }
 }
 
 task test(overwrite: true, dependsOn: testClasses) << {
