--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
 #comment
 language: java
-install: "gradle assemble -DsonatypeUsername=foo -DsonatypePassword=bar"
-script: "gradle check -DsonatypeUsername=foo -DsonatypePassword=bar"
+install: "gradle -PsonatypeUsername=foo -PsonatypePassword=bar assemble"
+script: "gradle -PsonatypeUsername=foo -PsonatypePassword=bar check"
