move common scala test gradle configuration to root build.gradle file, build should now run all tests when the gradle test task is called

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,5 @@
 language: java
 install: "gradle -PsonatypeUsername=foo -PsonatypePassword=bar assemble"
 script: "gradle -PsonatypeUsername=foo -PsonatypePassword=bar test"
+notifications:
+  slack: cyrusinnovation:Zv0o5TPXwIHK2mVYc4jbbrrv
