--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
-#comment
 language: java
 install: "gradle -PsonatypeUsername=foo -PsonatypePassword=bar assemble"
-script: "gradle -PsonatypeUsername=foo -PsonatypePassword=bar test"
+#use info level logging here so that failing tests produce useful output
+script: "gradle -PsonatypeUsername=foo -PsonatypePassword=bar test --info"
 notifications:
   slack: cyrusinnovation:Zv0o5TPXwIHK2mVYc4jbbrrv
