create gradle wrapper script setup to use gradle version 1.12

--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,10 @@ allprojects {
 		  jvmArgs = ['-XX:MaxPermSize=256m']
 		}
 	}
+
+    task wrapper(type: Wrapper) {
+        gradleVersion = '1.12'
+    }
 }
 
 subprojects {
