--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+env:
+   - TERM=dumb
 language: java
 install: "gradle -PsonatypeUsername=foo -PsonatypePassword=bar assemble"
 #use info level logging here so that failing tests produce useful output
