--- a/examples/computation-store/build.gradle
+++ b/examples/computation-store/build.gradle
@@ -20,6 +20,10 @@ dependencies {
     compile("org.scalatra:scalatra_2.10:2.2.2") {
         exclude module: 'joda-time'
     }
+    compile("org.scalatra:scalatra-json_2.10:2.2.2") {
+        exclude module: 'joda-time'
+    }
+    compile("org.json4s:json4s-jackson_2.10:3.2.10")
     compile("org.eclipse.jetty:jetty-webapp:9.1.5.v20140505")
 
     compile "com.googlecode.scalascriptengine:scalascriptengine:1.3.7-$scalaVersion"
